--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.3.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.suncaper.springboot.demo</groupId>
+    <groupId>scu.huangtao.aucmall</groupId>
     <artifactId>aucmall</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>aucmall</name>
